--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,4 +3,13 @@
     height: 300px;
     margin: 0 135px;
     background: #FFF;
+    display: flex;
+    flex-direction: column;
+}
+
+@media screen and (max-width: 1439px) {
+    .header {
+        margin: 0;
+        width: 100%;
+    }
 }
