--- a/blocks/menu/__cart/menu__cart.css
+++ b/blocks/menu/__cart/menu__cart.css
@@ -1,3 +1,9 @@
 .menu__cart {
     display: flex;
 }
+
+@media screen and (max-width: 767px) {
+    .menu__cart {
+        flex-direction: column;
+    }
+}
