--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,11 @@
     max-width: 1440px;
     margin: 0 auto;
     font-family: 'Roboto', sans-serif;
+    position: relative;
+}
+
+@media screen and (max-width: 1439px) {
+    .page {
+        margin: 0;
+    }
 }
