--- a/pages/index.css
+++ b/pages/index.css
@@ -1,13 +1,14 @@
 @import url(../vendor/normalize.css);
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/root/root.css);
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__up/header__up.css);
 @import url(../blocks/menu/menu.css);
 @import url(../blocks/menu/__navbar/menu__navbar.css);
 @import url(../blocks/menu/__navbar-item/menu__navbar-item.css);
+@import url(../blocks/menu/__navbar-link/menu__navbar-link.css);
 @import url(../blocks/menu/__navbar-items/menu__navbar-items.css);
-@import url(../blocks/menu/__navbar-login/menu__navbar-login.css);
 @import url(../blocks/login/login.css);
 @import url(../blocks/login/__text/login__text.css);
 @import url(../blocks/login/__line/login__line.css);
@@ -21,3 +22,31 @@
 @import url(../blocks/menu/__cart-banner/menu__cart-banner.css);
 @import url(../blocks/cart/__item/cart__item.css);
 @import url(../blocks/cart/__item-img/cart__item-img.css);
+@import url(../blocks/schedule/schedule.css);
+@import url(../blocks/schedule/__number/schedule__number.css);
+@import url(../blocks/schedule/__region/schedule__region.css);
+@import url(../blocks/schedule/__region-change/schedule__region-change.css);
+@import url(../blocks/schedule/__region-img/schedule__region-img.css);
+@import url(../blocks/schedule/__region-text/schedule__region-text.css);
+@import url(../blocks/schedule/__workhours/schedule__workhours.css);
+@import url(../blocks/schedule/__workhours-text/schedule__workhours-text.css);
+@import url(../blocks/schedule/__workhours-text/_numbers/scheudle__workhours-text_numbers.css);
+@import url(../blocks/schedule/__region-text/_change/schedule__region-text_change.css);
+@import url(../blocks/navbar/navbar.css);
+@import url(../blocks/navbar/__item/navbar__item.css);
+@import url(../blocks/navbar/__items/navbar__items.css);
+@import url(../blocks/navbar/__sale/navbar__sale.css);
+@import url(../blocks/navbar/__search-img/navbar__search-img.css);
+@import url(../blocks/navbar/__search/navbar__search.css);
+@import url(../blocks/navbar/__sale-text/navbar__sale-text.css);
+@import url(../blocks/navbar/__item-wrap/navbar__item-wrap.css);
+@import url(../blocks/navbar/__link/navbar__link.css);
+@import url(../blocks/navbar/__item/_active/navbar__item_active.css);
+@import url(../blocks/hamburger/hamburger.css);
+@import url(../blocks/hamburger/__bar/hamburger__bar.css);
+@import url(../blocks/hamburger/_active/hamburger_active.css);
+@import url(../blocks/overlay/__items/overlay__items.css);
+@import url(../blocks/overlay/__item/overlay__item.css);
+@import url(../blocks/overlay/overlay.css);
+@import url(../blocks/overlay/__item-link/overlay__item-link.css);
+@import url(../blocks/overlay/_active/overlay_active.css);
