--- a/blocks/cart/__buttons/cart__buttons.css
+++ b/blocks/cart/__buttons/cart__buttons.css
@@ -3,3 +3,9 @@
     margin: 0 35px 0 0;
     padding: 0;
 }
+
+@media screen and (max-width: 1023px) {
+    .cart__buttons {
+        margin-right: 15px;
+    }
+}
