--- a/blocks/cart/__items/cart__items.css
+++ b/blocks/cart/__items/cart__items.css
@@ -4,3 +4,9 @@
     padding: 0;
     display: flex;
 }
+
+@media screen and (max-width: 374px) {
+    .cart__items {
+        flex-direction: column;
+    }
+}
