--- a/blocks/login/__text/login__text.css
+++ b/blocks/login/__text/login__text.css
@@ -6,4 +6,11 @@
     line-height: 14px;
     letter-spacing: -0.01em;
     color: #252525;
+    transition: .3s linear;
+    text-decoration: none;
+}
+
+.login__text:hover {
+    opacity: .6;
+    cursor: pointer;
 }
