--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -1,9 +1,23 @@
 .logo {
-    max-width: 210px;
     width: 100%;
     height: 134px;
     background-image: url("../../images/logo.svg");
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: 19px;
+}
+
+@media screen and (max-width: 1439px) {
+    .logo {
+        width: 150px;
+        height: 130px;
+        background-size: contain;
+        background-position: center bottom;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .logo {
+        display: none;
+    }
 }
