--- a/blocks/menu/__navbar-item/menu__navbar-item.css
+++ b/blocks/menu/__navbar-item/menu__navbar-item.css
@@ -7,8 +7,20 @@
     line-height: 14px;
     letter-spacing: -0.01em;
     color: #252525;
+    transition: .3s linear;
 }
 
 .menu__navbar-item:last-of-type {
     margin-right: 0;
+}
+
+.menu__navbar-item:hover {
+    opacity: .6;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1023px) {
+    .menu__navbar-item {
+        margin-right: 15px;
+    }
 }
